tests/expectations/parser/functions/const_public_param_fail.out
Error [EPAR0370047]: expected parameter name
    --> test:3:24
     |
   3 |     function x(x: u32, const public y: i32) {
     |                        ^^^^^
Error [EPAR0370047]: expected parameter name
    --> test:7:25
     |
   7 |     function x(constant public x: u32, y: i32) {
     |                         ^^^^^^
